--- a/basic_html_page.html
+++ b/basic_html_page.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en-US">
   <head>
     <title></title>
+    <meta charset="UTF-8" />
   </head>
   <body>
     
